h1 overflow fix

--- a/frontend/public/assets/css/responsive.css
+++ b/frontend/public/assets/css/responsive.css
@@ -392,6 +392,12 @@
 
 }
 
+.slider-text h1 {
+
+	font-size: 2.7rem;
+
+}
+
 .slider-height {
 
 	min-height: 750px;
